# XJemulator

./: .gitignore  Cargo.toml  GUIDE.md  GUIDE_EN.md  LICENSE  README.md  README_EN.md  config.toml  mi_mando.toml
.cargo_home/: .global-cache
.cargo_home/registry/cache/index.crates.io-1949cf8c6b5b557f/: evdevil-0.2.3.crate  evdevil-0.4.0.crate  toml_edit-0.25.10+spec-1.1.0.crate  uoctl-1.0.1.crate  wayland-backend-0.3.15.crate  wayland-client-0.31.14.crate  wayland-cursor-0.31.14.crate  wayland-protocols-0.32.12.crate  wayland-protocols-misc-0.3.12.crate  wayland-protocols-plasma-0.3.12.crate  wayland-protocols-wlr-0.3.12.crate  wayland-scanner-0.31.10.crate  wayland-sys-0.31.11.crate
.cargo_home/registry/src/index.crates.io-1949cf8c6b5b557f/evdevil-0.2.3/: .cargo_vcs_info.json  CHANGELOG.md  Cargo.toml  Cargo.toml.orig  README.md
.cargo_home/registry/src/index.crates.io-1949cf8c6b5b557f/evdevil-0.2.3/examples/: fftest.rs  grab.rs  hotplug.rs  keymap.rs  list.rs  multitouch.rs  poll.rs  reader.rs  uinput.rs
.cargo_home/registry/src/index.crates.io-1949cf8c6b5b557f/evdevil-0.2.3/src/: abs_info.rs  batch.rs  bits.rs  evdev.rs  event.rs  ff.rs  hotplug.rs  input_id.rs  key_repeat.rs  keymap_entry.rs  lib.rs  macros.rs  raw.rs  reader.rs  slot.rs  uinput.rs  util.rs  version.rs
.cargo_home/registry/src/index.crates.io-1949cf8c6b5b557f/evdevil-0.4.0/: .cargo_vcs_info.json  CHANGELOG.md  Cargo.toml  Cargo.toml.orig  README.md
.cargo_home/registry/src/index.crates.io-1949cf8c6b5b557f/uoctl-1.0.1/: .cargo_vcs_info.json  CHANGELOG.md  Cargo.toml  Cargo.toml.orig  README.md
.cargo_home/registry/src/index.crates.io-1949cf8c6b5b557f/wayland-cursor-0.31.14/: .cargo_vcs_info.json  Cargo.toml
.cargo_home/registry/src/index.crates.io-1949cf8c6b5b557f/wayland-protocols-misc-0.3.12/: .cargo_vcs_info.json  Cargo.toml
.cargo_home/registry/src/index.crates.io-1949cf8c6b5b557f/wayland-protocols-plasma-0.3.12/: .cargo_vcs_info.json
assets/: xjemulator.desktop
docs/: architecture.md  calibration_engine.md  i18n_system.md  packaging.md  udev_rules.md
docs/architecture/: folder_structure.md  overview.md
docs/core/: mapper.md  uinput_and_reader.md
docs/gui/: calibration_wizard.md  egui_implementation.md  i18n_system.md
docs/packaging/: builds_and_releases.md
profiles/: generic.toml
src/: config.rs  error.rs  i18n.rs  main.rs  mapper.rs  reader.rs  scanner.rs  virtual_device.rs  xbox_descriptor.rs
src/gui/: app.rs  backend.rs  mod.rs  types.rs  udev_setup.rs
udev/: 99-xjemulator.rules
(+79 files in other folders)
