[package]
name = "xjemulator"
version = "0.1.0"
description = "A dynamic GUI to emulate virtual Xbox 360 controllers on Linux via evdevil/uinput."
edition = "2021"
license = "MIT"

[dependencies]
eframe = "0.31"
egui = "0.31"
evdevil = "0.2"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"

[package.metadata.deb]
maintainer = "Johancy <johancy@local>"
copyright = "2024, Johancy"
license-file = ["LICENSE", "4"]
depends = "$auto"
section = "utility"
assets = [
    ["target/release/xjemulator", "usr/bin/xjemulator", "755"],
    ["assets/xjemulator.desktop", "usr/share/applications/xjemulator.desktop", "644"],
    ["assets/xjemulator.svg", "usr/share/icons/hicolor/scalable/apps/xjemulator.svg", "644"],
    ["udev/99-xjemulator.rules", "etc/udev/rules.d/99-xjemulator.rules", "644"]
]
maintainer-scripts = "dist/debian"

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/xjemulator", dest = "/usr/bin/xjemulator", mode = "755" },
    { source = "assets/xjemulator.desktop", dest = "/usr/share/applications/xjemulator.desktop", mode = "644" },
    { source = "assets/xjemulator.svg", dest = "/usr/share/icons/hicolor/scalable/apps/xjemulator.svg", mode = "644" },
    { source = "udev/99-xjemulator.rules", dest = "/etc/udev/rules.d/99-xjemulator.rules", mode = "644" }
]
